--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
       
     - name: Build
-      run: dotnet build 2nd Semester/Homework 4/ParseTree
+      run: dotnet build ConsoleApp1
       
     - name: Run tests
       run: dotnet test
